--- a/TestSpringInitilizr/src/main/resources/application.properties
+++ b/TestSpringInitilizr/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://mysql-trifulcas.alwaysdata.net/trifulcas_code
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=trifulcas_code
-spring.datasource.password=TrifulcasForever
+spring.datasource.password=TrifulcasNever
 server.port = 9090
+spring.devtools.livereload.enabled=true
