--- a/ApiAula/src/main/resources/application.properties
+++ b/ApiAula/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://mysql-trifulcasp.alwaysdata.net/trifulcas_code
+spring.datasource.url=jdbc:mysql://mysql-trifulcas2023.alwaysdata.net/trifulcas2023_spring
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=trifulcas_code
+spring.datasource.username=306756
 spring.datasource.password=TrifulcasNever
 server.port = 9090
