--- a/TestSpringInitilizr/src/main/resources/application.properties
+++ b/TestSpringInitilizr/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://mysql-trifulcas.alwaysdata.net/trifulcas_code
+spring.datasource.url=jdbc:mysql://mysql-trifulcasp.alwaysdata.net/trifulcasp_code
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=trifulcas_code
+spring.datasource.username=306422_code
 spring.datasource.password=TrifulcasNever
 server.port = 9090
 spring.devtools.livereload.enabled=true
