--- a/ApiAula/src/main/resources/application.properties
+++ b/ApiAula/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=306756
 spring.datasource.password=TrifulcasNever
 server.port = 9090
+spring.devtools.livereload.enabled=true
