--- a/CrudSpring/src/main/resources/application.properties
+++ b/CrudSpring/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://mysql-trifulcas.alwaysdata.net/trifulcas_code
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=trifulcas_code
-spring.datasource.password=TrifulcasForever
+spring.datasource.password=TrifulcasNever
 server.port = 9097
 
 
