--- a/CrudSpring/pom.xml
+++ b/CrudSpring/pom.xml
@@ -29,6 +29,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -55,7 +56,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-				<version>8.0.32</version>
+			<version>8.0.32</version>
 		</dependency>
 	</dependencies>
 	<build>
