--- a/CrudSpring/src/main/resources/application.properties
+++ b/CrudSpring/src/main/resources/application.properties
@@ -3,6 +3,5 @@ spring.datasource.url=jdbc:mysql://mysql-trifulcas.alwaysdata.net/trifulcas_code
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=trifulcas_code
 spring.datasource.password=TrifulcasNever
-server.port = 9097
-
-
+server.port = 9090
+spring.devtools.livereload.enabled=true
